media/templates/overseerr/overseerr-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: overseerr
  name: overseerr
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5055
  selector:
    app: overseerr
  type: ClusterIP
